--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ keywords = ["ros", "manifest", "package", "xml"]
 categories = ["parser-implementations", "science::robotics"]
 
 [dependencies]
-regex = "1.2.0"
-once_cell = "0.2.4"
-roxmltree = "0.6.1"
-err-derive = "0.1.5"
+regex = "1.4.2"
+once_cell = "1.4.1"
+roxmltree = "0.13.0"
+thiserror = "1.0.22"
