--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,3 +18,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Rust Action
       uses: icepuma/rust-action@1.47.0
+      with:
+          args: cargo fmt -- --check && cargo clippy -- -Dwarnings && cargo test
